--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://52df25d4-db9d-4fba-9c00-b65973b17e22.preview.emergentagent.com
 WDS_SOCKET_PORT=443
